# SDL2-clion-template

./: CMakeLists.txt
